# Vtd_Client

./: .gitignore  CMakeLists.txt  README.md  config.xml
.github/workflows/: build.yml
include/: config.h  dns_monitor.h  process_monitor.h  proxy_server.h  socks5_client.h  traffic_interceptor.h  windivert.h  windivert_loader.h
src/: config.cpp  dns_monitor.cpp  main.cpp  process_monitor.cpp  proxy_server.cpp  socks5_client.cpp  traffic_interceptor.cpp  windivert_loader.cpp
